# 3D-Engine

./: .gitignore  CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  config.h  config.h.in  glad.c  main.cxx
src/glad/: glad.h
src/math/: CMakeLists.txt  Matrix4.cxx  Matrix4.h  Vector3.cxx  Vector3.h
tests/: CMakeLists.txt  Vector3_tests.cxx  tests.cxx
